# strata

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  setup-cross-compiler.md  sync-sysroot.sh
cmake/: bela-func.cmake  bela-gcc.toolchain.cmake  perl.cmake
examples/bead-controller/: CMakeLists.txt
examples/bead-controller/cli/: CMakeLists.txt  skini-gen.pl
examples/file-player/: CMakeLists.txt  FPlayer.cpp  FPlayer.h  file-player.cpp
examples/latelybass/: CMakeLists.txt  LBass.cpp  LBass.h  aceofbass.ski  latelybass.cpp
examples/minimal/: CMakeLists.txt  bethree.cpp  controlbee-cli.cpp  controlbee-midi.cpp  controlbee-srv.cpp  rtblit.cpp  rtfile.cpp  rtsine.cpp
examples/perlembed/: CMakeLists.txt
examples/perlembed/bang-cli/: CMakeLists.txt  Strata.pm  bang-perl-cli.cpp  bang.pl  helpers.pl  strata.pm
examples/perlembed/bang-cli-osc/: CMakeLists.txt  bang-perl-cli-osc.cpp
examples/perlembed/bang-cli-osc/scripts/: bang.pl  helpers.pl
examples/perlembed/bang-srv/: CMakeLists.txt  bang-srv.cpp
examples/trill/trill-cli/: CMakeLists.txt  trill-cli.cpp
examples/trill/trill-cli-one/: CMakeLists.txt  trill-cli-one.cpp
examples/trill/trill-osc/: CMakeLists.txt  influx.cpp  influx.h  leaky-integrator.cpp  leaky-integrator.h  trill-config.h  trill-filters.cpp  trill-filters.h  trill-osc.cpp
examples/trill/trill-perl-cli/: CMakeLists.txt  trill-perl-cli.cpp
examples/trill/trill-perl-cli-one/: CMakeLists.txt  one-note.pl  trill-perl-cli-one.cpp
